[project]
name = "randomizer"
version = "0.1.0"
description = "Randomizing API built with FastAPI"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.135.3",
]

[dependency-groups]
dev = [
    "ruff>=0.15.9",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
src = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
